<resources>
    <string name="app_name">SportsQuizApp</string>
    <string name="q1">1. Who has won the 2016 Women’s Singles Wimbledon Championship?</string>
    <string name="q1_a">Simona Halep</string>
    <string name="q1_b">Serena Williams</string>
    <string name="q1_c">Angelique Kerber</string>
    <string name="q1_d">Andy Murray</string>
    <string name="q2">2. Who was the most expensive player at the pro kabbadi auctions 2016?</string>
    <string name="q2_a">Anup Kumar</string>
    <string name="q2_b">Sandeep Narwal</string>
    <string name="q2_c">Mohit Chillar</string>
    <string name="q2_d">Jang Kun Lee</string>
    <string name="q3">3. In 2014 who won the inaugural edition of the Dubai Open Golf Championship?</string>
    <string name="q3_a">Arjun Atwal</string>
    <string name="q3_b">Wang Jeung-hun</string>
    <string name="q3_c">Simon Yates</string>
    <string name="q3_d">Shiv Kapur</string>
    <string name="q4">4. Who won the 2014 ATP tennis Championship in Abu Dhabi?</string>
    <string name="q4_a">Rafael Nadal</string>
    <string name="q4_b">Andy Murray</string>
    <string name="q4_c">Novak Djokovic</string>
    <string name="q4_d">Roger Federer</string>
    <string name="q5">5. In 2014 who was the AIFF player of the year?</string>
    <string name="q5_a">Sandesh Jigan</string>
    <string name="q5_b">Sunil Chhetri</string>
    <string name="q5_c">Mandeep Singh</string>
    <string name="q5_d">Sardar Singh</string>
    <string name="q6">6. Who are the best two footballer in the world in the 21st century?</string>
    <string name="q6_a">George Best</string>
    <string name="q6_b">Lionel Messi</string>
    <string name="q6_c">Cristiano Ronaldo</string>
    <string name="q6_d">Neymar</string>
    <string name="q7">what is the national team that won the World Club 2014 ?</string>
    <string name="q8">what is the african team that won the African Nations Cup 2017 ?</string>
    <string name="q9">what is the african team that won third place in the African Nations Cup 2017 ?</string>
    <string name="submit">submit</string>
    <string name="score">Your Score: </string>
</resources>
