<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.ahmedmakramallah.quizapp.MainActivity">

        <ImageView
            android:id="@+id/open"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/open" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/q1" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q1_r1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_a" />

            <RadioButton
                android:id="@+id/q1_r2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_b" />

            <RadioButton
                android:id="@+id/q1_r3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_c" />

            <RadioButton
                android:id="@+id/q1_r4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_d" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/q2" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q2_r1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_a" />

            <RadioButton
                android:id="@+id/q2_r2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_b" />

            <RadioButton
                android:id="@+id/q2_r3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_c" />

            <RadioButton
                android:id="@+id/q2_r4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_d" />

        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/q3" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q3_r1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_a" />

            <RadioButton
                android:id="@+id/q3_r2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_b" />

            <RadioButton
                android:id="@+id/q3_r3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_c" />

            <RadioButton
                android:id="@+id/q3_r4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_d" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/q4" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q4_r1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_a" />

            <RadioButton
                android:id="@+id/q4_r2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_b" />

            <RadioButton
                android:id="@+id/q4_r3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_c" />

            <RadioButton
                android:id="@+id/q4_r4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_d" />

        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/q5" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">


            <RadioButton
                android:id="@+id/q5_r1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_a" />

            <RadioButton
                android:id="@+id/q5_r2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_b" />

            <RadioButton
                android:id="@+id/q5_r3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_c" />

            <RadioButton
                android:id="@+id/q5_r4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_d" />


        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/q6" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/q6_c1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q6_a" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/q6_c2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkBoxScore" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q6_b" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/q6_c3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkBoxScore" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q6_c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/q6_c4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q6_d" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/q7" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/q8" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/q9" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>
